--- a/week1/index.html
+++ b/week1/index.html
@@ -15,7 +15,7 @@
             <div>Item3</div>
             <div>Item4</div>
         </div>
-        <div class="menu">
+        <div class="menu" >
             <img src="public/align_justify_icon.png" alt="this is list img">
         </div>
         <div class="fixed">
@@ -44,43 +44,43 @@
         <div class="big-boxes">
             <div>
                 <div>Title1</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title2</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title3</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title4</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title5</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title6</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title7</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title8</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title9</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
             <div>
                 <div>Title10</div>
-                <img src="public/img1.png" alt="this is img" class="smallimg" >
+                <img src="public/star_icon.png" alt="this is img" class="smallimg" >
             </div>
         </div>
     </div>
