--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WeHelp Assignment</title>
   <link rel="stylesheet" type="text/css" href="public/style.css">
-  <script src="public/RWD.js" defer></script>
+  <script src="public/AJAX.js"></script>
 <body>
     <div id="loading" style="display:flex; justify-content: center; text-align: center; font-size: 20px; ">
         Loading... Please wait.
@@ -33,15 +33,15 @@
         <div class="all-boxes">
             <div class="small-boxes">
                 <div>
-                    <img src="public/img1.png" alt="this is img" class="smallimg" >
+                    <img src=" " alt="this is img" class="smallimg" >
                     <span>Promotion 1</span>
                 </div>
                 <div>
-                    <img src="public/img1.png" alt="this is img" class="smallimg" >
+                    <img src=" " alt="this is img" class="smallimg" >
                     <span>Promotion 2</span>
                 </div>
                 <div>
-                    <img src="public/img1.png" alt="this is img" class="smallimg" >
+                    <img src=" " alt="this is img" class="smallimg" >
                     <span>Promotion 3</span>
                 </div>
             </div>
