--- a/week3/index.html
+++ b/week3/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WeHelp Assignment</title>
   <link rel="stylesheet" type="text/css" href="public/style.css">
-  <script src="public/AJAX.js"></script>
+  <script src="public/AJAX.js" defer></script>
 <body>
     <div id="loading" style="display:flex; justify-content: center; text-align: center; font-size: 20px; ">
         Loading... Please wait.
